@@ -15,6 +15,12 @@ else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 Changes for SVN:
 
+Remove unused parameter.
+ include/sproto.h
+ server/server.c
+ test/unit/server/comet_perf.c
+Nicolas Weeger 2007-08-05
+
 Remove unused command_generate().
  include/sproto.h
  server/c_wiz.c
